--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "nextjs-fullstack-app-template",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=14.0.0",
+    "yarn": ">=1.22.0",
+    "npm": "please-use-yarn"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "next": "12.3.0",
@@ -19,6 +25,8 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
+    "husky": "^8.0.1",
+    "prettier": "^2.7.1",
     "typescript": "4.8.3"
   }
 }
