--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "next": "12.3.0",
@@ -20,16 +22,29 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.0",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@storybook/addon-actions": "^6.5.11",
+    "@storybook/addon-essentials": "^6.5.11",
+    "@storybook/addon-interactions": "^6.5.11",
+    "@storybook/addon-links": "^6.5.11",
+    "@storybook/builder-webpack5": "^6.5.11",
+    "@storybook/manager-webpack5": "^6.5.11",
+    "@storybook/react": "^6.5.11",
+    "@storybook/testing-library": "^0.0.13",
     "@types/node": "18.7.17",
     "@types/react": "18.0.19",
     "@types/react-dom": "18.0.6",
+    "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
     "husky": "^8.0.1",
     "prettier": "^2.7.1",
     "typescript": "4.8.3"
+  },
+  "resolutions": {
+    "webpack": "^5"
   }
 }
