--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "eslint-plugin-storybook": "^0.6.4",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
